--- a/MiraclePack/app/src/main/res/values/colors.xml
+++ b/MiraclePack/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0094FF</color>
+    <color name="grey">#d9d9d9</color>
 </resources>
