--- a/MiraclePack/app/src/main/res/values/colors.xml
+++ b/MiraclePack/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0094FF</color>
+    <color name="mainTextColor">#323232</color>
+    <color name="squareColor">#D9D9D9</color>
+    <color name="backgroundColor">#E2E2E2</color>
 </resources>
