--- a/MiraclePack/app/src/main/res/layout/fragment_home.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_home.xml
@@ -79,7 +79,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
                 android:background="@drawable/roundstyle"
-                android:backgroundTint="@color/backgroundColor"
+                android:backgroundTint="@color/grey"
                 android:gravity="center_vertical">
 
                 <ImageView
@@ -107,7 +107,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
                 android:background="@drawable/roundstyle"
-                android:backgroundTint="@color/backgroundColor"
+                android:backgroundTint="@color/grey"
                 android:gravity="center_vertical">
 
                 <ImageView
@@ -133,7 +133,7 @@
                 android:layout_height="50dp"
                 android:layout_margin="15dp"
                 android:background="@drawable/roundstyle"
-                android:backgroundTint="@color/backgroundColor"
+                android:backgroundTint="@color/grey"
                 android:gravity="center_vertical"
                 android:padding="5dp">
 
