--- a/MiraclePack/app/src/main/res/layout/fragment_homebagcontent.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_homebagcontent.xml
@@ -33,7 +33,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
                 android:background="@drawable/roundstyle"
-                android:backgroundTint="@color/backgroundColor"
+                android:backgroundTint="@color/grey"
                 android:gravity="center_vertical">
 
                 <TextView
@@ -56,7 +56,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
                 android:background="@drawable/roundstyle"
-                android:backgroundTint="@color/backgroundColor"
+                android:backgroundTint="@color/grey"
                 android:gravity="center_vertical">
 
                 <TextView
@@ -80,7 +80,7 @@
                 android:layout_marginEnd="15dp"
                 android:layout_marginBottom="15dp"
                 android:background="@drawable/roundstyle"
-                android:backgroundTint="@color/backgroundColor"
+                android:backgroundTint="@color/grey"
                 android:gravity="center_vertical">
 
                 <TextView
