--- a/MiraclePack/app/src/main/res/layout/activity_add.xml
+++ b/MiraclePack/app/src/main/res/layout/activity_add.xml
@@ -25,7 +25,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/addbagcontentlayout_bg"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +59,7 @@
             android:textAlignment="center" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/addButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
