--- a/MiraclePack/app/src/main/res/values/colors.xml
+++ b/MiraclePack/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0094FF</color>
     <color name="grey">#d9d9d9</color>
+    <color name="green">#98FB98</color>
 </resources>
