--- a/MiraclePack/app/src/main/res/layout/fragment_home.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_home.xml
@@ -14,20 +14,20 @@
 
         <Button
             android:id="@+id/viewContentButton"
-            android:layout_width="350dp"
-            android:layout_height="398dp"
+            android:layout_width="@dimen/_269sdp"
+            android:layout_height="@dimen/_240sdp"
+            android:layout_marginTop="@dimen/_23sdp"
             android:background="@drawable/roundstyle"
             android:backgroundTint="@color/black"
-            android:layout_marginTop="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:id="@+id/backpackViewSection"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/_270sdp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="@dimen/_23sdp"
             android:background="@drawable/roundstyle"
             android:backgroundTint="@color/white"
             android:orientation="vertical"
@@ -38,22 +38,22 @@
 
             <ImageView
                 android:id="@+id/backpackImage"
-                android:layout_width="350dp"
-                android:layout_height="350dp"
+                android:layout_width="@dimen/_200sdp"
+                android:layout_height="@dimen/_200sdp"
                 android:layout_gravity="center_horizontal"
                 android:backgroundTint="@color/white"
-                android:padding="10dp"
+                android:padding="@dimen/_5sdp"
                 android:src="@drawable/backpack" />
 
             <TextView
                 android:id="@+id/configName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
+                android:layout_marginBottom="@dimen/_12sdp"
                 android:gravity="center"
                 android:text="Place Holder"
                 android:textColor="@color/mainTextColor"
-                android:textSize="25sp"
+                android:textSize="@dimen/_23sdp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -62,7 +62,7 @@
             android:id="@+id/backpackInfoSection"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="@dimen/_23sdp"
             android:background="@drawable/roundstyle"
             android:backgroundTint="@color/white"
             android:orientation="vertical"
@@ -73,19 +73,19 @@
 
             <LinearLayout
                 android:id="@+id/batteryStatus"
-                android:layout_width="320dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="15dp"
+                android:layout_width="@dimen/_245sdp"
+                android:layout_height="@dimen/_39sdp"
+                android:layout_marginStart="@dimen/_11sdp"
+                android:layout_marginTop="@dimen/_12sdp"
+                android:layout_marginEnd="@dimen/_12sdp"
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="@color/grey"
                 android:gravity="center_vertical">
 
                 <ImageView
                     android:id="@+id/batteryStatusImage"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="@dimen/_27sdp"
+                    android:layout_height="@dimen/_27sdp"
                     android:src="@drawable/baseline_battery_5_bar_24" />
 
                 <TextView
@@ -94,26 +94,26 @@
                     android:layout_height="wrap_content"
                     android:text="80%"
                     android:textColor="@color/mainTextColor"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/_15sdp"
                     android:textStyle="bold" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/bluetoothStatus"
-                android:layout_width="320dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="15dp"
+                android:layout_width="@dimen/_245sdp"
+                android:layout_height="@dimen/_39sdp"
+                android:layout_marginStart="@dimen/_11sdp"
+                android:layout_marginTop="@dimen/_11sdp"
+                android:layout_marginEnd="@dimen/_11sdp"
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="@color/grey"
                 android:gravity="center_vertical">
 
                 <ImageView
                     android:id="@+id/bluetoothStatusImage"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="@dimen/_27sdp"
+                    android:layout_height="@dimen/_27sdp"
                     android:src="@drawable/baseline_bluetooth_24" />
 
                 <TextView
@@ -122,35 +122,35 @@
                     android:layout_height="wrap_content"
                     android:text="Verbonden"
                     android:textColor="@color/mainTextColor"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/_15sdp"
                     android:textStyle="bold" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/gpsStatus"
-                android:layout_width="320dp"
-                android:layout_height="50dp"
-                android:layout_margin="15dp"
+                android:layout_width="@dimen/_245sdp"
+                android:layout_height="@dimen/_39sdp"
+                android:layout_margin="@dimen/_12sdp"
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="@color/grey"
                 android:gravity="center_vertical"
-                android:padding="5dp">
+                android:padding="@dimen/_4sdp">
 
                 <ImageView
                     android:id="@+id/gpsStateImage"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="@dimen/_27sdp"
+                    android:layout_height="@dimen/_27sdp"
                     android:src="@drawable/baseline_gps_fixed_24" />
 
                 <TextView
                     android:id="@+id/gpsState"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
+                    android:layout_marginStart="@dimen/_4sdp"
                     android:text="Verbonden"
                     android:textColor="@color/mainTextColor"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/_15sdp"
                     android:textStyle="bold" />
 
             </LinearLayout>
