--- a/MiraclePack/app/src/main/res/layout/fragment_settings.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_settings.xml
@@ -8,23 +8,23 @@
     tools:context=".SettingsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="339dp"
-        android:layout_height="644dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/batteryStatus"
-            android:layout_width="320dp"
-            android:layout_height="50dp"
+            android:id="@+id/NotificationOnOff"
+            android:layout_width="@dimen/_245sdp"
+            android:layout_height="@dimen/_39sdp"
             android:background="@drawable/roundstyle"
             android:backgroundTint="@color/grey"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.494"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.041">
+            app:layout_constraintVertical_bias="0.07">
 
             <TextView
+                android:id="@+id/notificationText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|start"
