--- a/MiraclePack/app/src/main/res/layout/fragment_loginpage.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_loginpage.xml
@@ -62,7 +62,7 @@
             android:layout_height="48dp"
             android:layout_marginStart="72dp"
             android:layout_marginTop="56dp"
-            android:onClick="openmoetwachtwoordvergetenpageinkomen"
+            android:onClick="openSignUpActivity"
             android:text="@string/wachtwoord_vergeten"
             android:textSize="15sp"
             android:textStyle="bold"
