Fixed the emulator crashing when pressing a button on the homepage, removed the hard coded title on the homeBagContentActivity page and made it so it displays the name of the current configuration

--- a/MiraclePack/app/src/main/res/layout/fragment_home.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_home.xml
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_12sdp"
                 android:gravity="center"
-                android:text="Place Holder"
+                android:text="Place holder"
                 android:textColor="@color/mainTextColor"
                 android:textSize="@dimen/_23sdp"
                 android:textStyle="bold" />
