--- a/MiraclePack/app/src/main/res/layout/fragment_passwordreset.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_passwordreset.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     android:padding="18dp">
 
+    <FrameLayout
+        android:id="@+id/fragment_passwordreset"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" />
+
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -71,6 +78,7 @@
             app:layout_constraintHorizontal_bias="0.139"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
