--- a/MiraclePack/app/src/main/res/layout/fragment_bag.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_bag.xml
@@ -34,7 +34,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/itemList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
