Changed style to house style colors and implemented confirmation popup on delete of location

--- a/MiraclePack/app/src/main/res/layout/item_geofence.xml
+++ b/MiraclePack/app/src/main/res/layout/item_geofence.xml
@@ -2,18 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/location_rounded_style"
     android:gravity="center_vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:layout_marginBottom="5dp">
 
     <TextView
         android:id="@+id/nameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:textSize="16sp"
+        android:textColor="@color/white"
         android:textStyle="bold" />
 
-    <Button
+    <ImageButton
         android:id="@+id/deleteLocation"
         android:layout_width="24dp"
         android:layout_height="24dp"
