--- a/MiraclePack/app/src/main/res/layout/activity_home_bag_content.xml
+++ b/MiraclePack/app/src/main/res/layout/activity_home_bag_content.xml
@@ -22,7 +22,7 @@
     <LinearLayout
         android:id="@+id/backpackInfoSection"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_160sdp"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/_12sdp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/houseStyleColor"
@@ -31,7 +31,7 @@
         tools:layout_editor_absoluteX="0dp">
 
         <LinearLayout
-            android:id="@+id/laptopPocketSection"
+            android:id="@+id/laptopCompartment"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_39sdp"
             android:layout_marginStart="@dimen/_10sdp"
@@ -42,11 +42,11 @@
             android:gravity="center_vertical">
 
             <TextView
-                android:id="@+id/laptopPocket"
+                android:id="@+id/laptopCompartmentText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_7sdp"
-                android:text="Laptop vak: leeg"
+                android:text="Laptop vak: "
                 android:textColor="@color/mainTextColor"
                 android:textSize="@dimen/_15sdp"
                 android:textStyle="bold" />
@@ -54,7 +54,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/frontPocketSection"
+            android:id="@+id/firstMainCompartment"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_39sdp"
             android:layout_marginStart="@dimen/_10sdp"
@@ -65,11 +65,11 @@
             android:gravity="center_vertical">
 
             <TextView
-                android:id="@+id/frontPocket"
+                android:id="@+id/firstMainCompartmentText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_7sdp"
-                android:text="Voor vak: leeg"
+                android:text="Eerste hoofdvak: "
                 android:textColor="@color/mainTextColor"
                 android:textSize="@dimen/_15sdp"
                 android:textStyle="bold" />
@@ -77,7 +77,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/mainPocketSection"
+            android:id="@+id/secondMainCompartment"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_39sdp"
             android:layout_marginStart="@dimen/_10sdp"
@@ -88,11 +88,32 @@
             android:gravity="center_vertical">
 
             <TextView
-                android:id="@+id/mainPocket"
+                android:id="@+id/secondMainCompartmentText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_7sdp"
-                android:text="Hoofdvak: leeg"
+                android:text="Tweede hoofdvak: "
+                android:textColor="@color/mainTextColor"
+                android:textSize="@dimen/_15sdp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/frontCompartment"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_39sdp"
+            android:layout_margin="@dimen/_10sdp"
+            android:background="@drawable/roundstyle"
+            android:backgroundTint="@color/white"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/frontCompartmentText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_7sdp"
+                android:text="Voor vak: "
                 android:textColor="@color/mainTextColor"
                 android:textSize="@dimen/_15sdp"
                 android:textStyle="bold" />
